# onchain-physics-wasm

./: .gitignore  Cargo.toml
contracts/: compiled_projectile_plot.json  constants.cairo  math.cairo  physics.cairo  projectile_plot.cairo  structs.cairo
site/: index.js  package.json
src/: lib.rs
